finish nav and section, adjust parallax scroll effect

--- a/src/index.html
+++ b/src/index.html
@@ -7,37 +7,8 @@
   <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-  <header class="navbar">
-    <div class="container">
-      <span class="logo"></span>
-      <ul class="nav-items">
-        <li class="nav-item">
-          <a href="#hero">首页</a>
-        </li>
-        <li class="nav-item">
-          <a href="#intro">活动介绍</a>
-        </li>
-        <li class="nav-item">
-          <a href="#agenda">日程安排</a>
-        </li>
-        <li class="nav-item">
-          <a href="#guest">演讲嘉宾</a>
-        </li>
-        <li class="nav-item">
-          <a href="#partner">合作伙伴</a>
-        </li>
-      </ul>
-    </div>
-  </header>
-  <div id="page">
-    <section id="hero">
-      <div class="container">
-        <div class="hero-logo"></div>
-        <a class="sign-up-btn" href="#"></a>
-      </div>
-    </section>
 
-    <!-- backgrounds -->
+  <div id="parallax">
     <div class="bg-2-hero">
     </div>
     <div class="bg-2-page">
@@ -47,8 +18,61 @@
   </div>
 
 
+  <header class="navbar">
+    <div class="container">
+      <span class="logo"></span>
+      <ul class="nav-items" id="nav">
+        <li class="nav-item">
+          <a href="#">首页</a>
+        </li>
+        <li class="nav-item">
+          <a href="#intro">活动介绍</a>
+        </li>
+        <li class="nav-item">
+          <a href="#agenda">日程安排</a>
+        </li>
+        <li class="nav-item">
+          <a href="#special-guest">演讲嘉宾</a>
+        </li>
+        <li class="nav-item">
+          <a href="#partner">合作伙伴</a>
+        </li>
+      </ul>
+    </div>
+  </header>
 
+  <section id="hero">
+    <div class="container">
+      <div class="hero-logo"></div>
+      <a class="sign-up-btn" href="#"></a>
+    </div>
+  </section>
+  <section id="intro">
+
+  </section>
+  <section id="agenda">
+    <div class="container">
+      <div class="title agenda-title"></div>
+    </div>
+  </section>
+  <section id="special-guest">
+    <div class="container">
+      <div class="title special-guest-title"></div>
+    </div>
+  </section>
+  <section id="guest">
+    <div class="container">
+      <div class="title guest-title"></div>
+    </div>
+  </section>
+  <section id="partner">
+    <div class="container">
+      <div class="title partner-title"></div>
+    </div>
+  </section>
 
   <script src="js/jquery-min.js"></script>
+  <script src="js/singlenav.js"></script>
+  <script src="js/index.js"></script>
 </body>
 </html>
