--- a/src/index.html
+++ b/src/index.html
@@ -39,8 +39,7 @@
     </section>
     <div class="bg-tri-1">
     </div>
-    <div class="bg-2-hero">
-    </div>
+    <img src="imgs/bg-2-hero.png" height="auto" width="100%" alt="" class="bg-2-hero">
   </div>
   <section id="agenda">
     <div class="container">
