use json to load data

--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
           <div class="tl-mod">
             <div class="time">9:00-10:00</div>
             <div class="tl-dot"></div>
-            <a class="topic-mod modal-trigger" data-modal="#popup1">
+            <a class="topic-mod modal-trigger" data-modal="popup" href="#popup" data-id="001">
               <span class="topic">客户服务宣导</span>
               <span class="author">蒋方</span>
             </a>
@@ -64,7 +64,7 @@
           <div class="tl-mod">
             <div class="time">9:00-10:00</div>
             <div class="tl-dot"></div>
-            <a class="topic-mod modal-trigger" data-modal="#popup1">
+            <a class="topic-mod modal-trigger" data-modal="popup" href="#popup" data-id="002">
               <span class="topic">客户服务宣导</span>
               <span class="author">蒋方</span>
             </a>
@@ -72,7 +72,7 @@
           <div class="tl-mod">
             <div class="time">9:00-10:00</div>
             <div class="tl-dot"></div>
-            <a class="topic-mod modal-trigger" data-modal="#popup1">
+            <a class="topic-mod modal-trigger" data-modal="popup" href="#popup">
               <span class="topic">客户服务宣导</span>
               <span class="author">蒋方</span>
             </a>
@@ -80,7 +80,7 @@
           <div class="tl-mod">
             <div class="time">9:00-10:00</div>
             <div class="tl-dot"></div>
-            <a class="topic-mod modal-trigger" data-modal="#popup1">
+            <a class="topic-mod modal-trigger" data-modal="popup" href="#popup">
               <span class="topic">客户服务宣导</span>
               <span class="author">蒋方</span>
             </a>
@@ -96,7 +96,7 @@
           <div class="tl-mod">
             <div class="time">9:00-10:00</div>
             <div class="tl-dot"></div>
-            <a class="topic-mod modal-trigger" data-modal="#popup1">
+            <a class="topic-mod modal-trigger" data-modal="popup" href="#popup">
               <span class="topic">客户服务宣导</span>
               <span class="author">蒋方</span>
             </a>
@@ -116,7 +116,7 @@
           <div class="tl-mod">
             <div class="time">9:00-10:00</div>
             <div class="tl-dot"></div>
-            <a class="topic-mod modal-trigger" data-modal="#popup1">
+            <a class="topic-mod modal-trigger" data-modal="popup" href="#popup">
               <span class="topic">客户服务宣导</span>
               <span class="author">蒋方</span>
             </a>
@@ -124,7 +124,7 @@
           <div class="tl-mod">
             <div class="time">9:00-10:00</div>
             <div class="tl-dot"></div>
-            <a class="topic-mod modal-trigger" data-modal="#popup1">
+            <a class="topic-mod modal-trigger" data-modal="popup" href="#popup">
               <span class="topic">客户服务宣导</span>
               <span class="author">蒋方</span>
             </a>
@@ -132,7 +132,7 @@
           <div class="tl-mod">
             <div class="time">9:00-10:00</div>
             <div class="tl-dot"></div>
-            <a class="topic-mod modal-trigger" data-modal="#popup1">
+            <a class="topic-mod modal-trigger" data-modal="popup" href="#popup">
               <span class="topic">客户服务宣导</span>
               <span class="author">蒋方</span>
             </a>
@@ -140,7 +140,7 @@
           <div class="tl-mod">
             <div class="time">9:00-10:00</div>
             <div class="tl-dot"></div>
-            <a class="topic-mod modal-trigger" data-modal="#popup1">
+            <a class="topic-mod modal-trigger" data-modal="popup" href="#popup">
               <span class="topic">客户服务宣导</span>
               <span class="author">蒋方</span>
             </a>
@@ -163,67 +163,67 @@
                 <li><a href="#user-research">用研<small>分会场</small></a></li>
               </ul>
               <div class="tab-content" id="design">
-                <a class="topic-mod modal-trigger" data-modal="#popup1">
+                <a class="topic-mod modal-trigger" data-modal="popup" href="#popup">
                   <span class="topic">视觉暂定</span>
                   <span class="author">琼雪</span>
                 </a>
-                <a class="topic-mod modal-trigger" data-modal="#popup1">
+                <a class="topic-mod modal-trigger" data-modal="popup" href="#popup">
                   <span class="topic">全链路体验设计</span>
                   <span class="author">琼雪</span>
                 </a>
-                <a class="topic-mod modal-trigger" data-modal="#popup1">
+                <a class="topic-mod modal-trigger" data-modal="popup" href="#popup">
                   <span class="topic">暂定</span>
                   <span class="author">琼雪</span>
                 </a>
-                <a class="topic-mod modal-trigger" data-modal="#popup1">
+                <a class="topic-mod modal-trigger" data-modal="popup" href="#popup">
                   <span class="topic">暂定</span>
                   <span class="author">琼雪</span>
                 </a>
-                <a class="topic-mod modal-trigger" data-modal="#popup1">
+                <a class="topic-mod modal-trigger" data-modal="popup" href="#popup">
                   <span class="topic">暂定</span>
                   <span class="author">琼雪</span>
                 </a>
               </div>
               <div class="tab-content" id="interaction">
-                <a class="topic-mod modal-trigger" data-modal="#popup1">
+                <a class="topic-mod modal-trigger" data-modal="popup" href="#popup">
                   <span class="topic">交互暂定暂定</span>
                   <span class="author">琼雪</span>
                 </a>
-                <a class="topic-mod modal-trigger" data-modal="#popup1">
+                <a class="topic-mod modal-trigger" data-modal="popup" href="#popup">
                   <span class="topic">全链路体验设计</span>
                   <span class="author">琼雪</span>
                 </a>
-                <a class="topic-mod modal-trigger" data-modal="#popup1">
+                <a class="topic-mod modal-trigger" data-modal="popup" href="#popup">
                   <span class="topic">暂定</span>
                   <span class="author">琼雪</span>
                 </a>
-                <a class="topic-mod modal-trigger" data-modal="#popup1">
+                <a class="topic-mod modal-trigger" data-modal="popup" href="#popup">
                   <span class="topic">暂定</span>
                   <span class="author">琼雪</span>
                 </a>
-                <a class="topic-mod modal-trigger" data-modal="#popup1">
+                <a class="topic-mod modal-trigger" data-modal="popup" href="#popup">
                   <span class="topic">暂定</span>
                   <span class="author">琼雪</span>
                 </a>
               </div>
               <div class="tab-content" id="user-research">
-                <a class="topic-mod modal-trigger" data-modal="#popup1">
+                <a class="topic-mod modal-trigger" data-modal="popup" href="#popup">
                   <div class="topic">用研暂定暂定</div>
                   <span class="author">琼雪</span>
                 </a>
-                <a class="topic-mod modal-trigger" data-modal="#popup1">
+                <a class="topic-mod modal-trigger" data-modal="popup" href="#popup">
                   <div class="topic">全链路体验设计</div>
                   <span class="author">琼雪</span>
                 </a>
-                <a class="topic-mod modal-trigger" data-modal="#popup1">
+                <a class="topic-mod modal-trigger" data-modal="popup" href="#popup">
                   <span class="topic">暂定</span>
                   <span class="author">琼雪</span>
                 </a>
-                <a class="topic-mod modal-trigger" data-modal="#popup1">
+                <a class="topic-mod modal-trigger" data-modal="popup" href="#popup">
                   <span class="topic">暂定</span>
                   <span class="author">琼雪</span>
                 </a>
-                <a class="topic-mod modal-trigger" data-modal="#popup1">
+                <a class="topic-mod modal-trigger" data-modal="popup" href="#popup">
                   <span class="topic">暂定</span>
                   <span class="author">琼雪</span>
                 </a>
@@ -370,34 +370,28 @@
     </div>
   </section>
 
-<div class="modal-dialog" data-modal="#popup1">
+<div class="modal-dialog" id="popup">
   <a href="#" class="jqmClose iconfont icon-close"></a>
   <div class="modal-header">
     <img src="" alt="guest-photo" width="111" height="111" class="photo">
-    <div class="name">Willy Lai</div>
-    <div class="title">三星-使用者体验创新中心总监</div>
+    <div class="name"></div>
+    <div class="title"></div>
   </div>
   <div class="modal-body">
     <div class="intro-wrap">
-      <p>毕业于加州大学伯克利分校建筑系。曾任斯坦福大学顾问、美国旧金山艺术大学和美国加州大学圣克鲁斯分校硅谷学院客座讲师。</p>
-      <p>现任三星使用者体验创新中心总监，负责Milk Music和所有跨终端三星音乐类产品。加入三星以前，曾带领PayPal, Intuit, eBay, AOL和无数硅谷新创公司进行全球性设计重整，其业务范畴横跨无线、平板、穿戴式设备、电视、以及web 端。Willy致力于帮助客户找到使用者需求和商业价值之间的平衡，并在过去20年的职涯中获奖无数。</p>
+
     </div>
     <hr class="line">
     <div class="topic-wrap">
-      <div class="topic">《使用者体验设计和商业价值对接》</div>
-      <p>在这次的分享中，Willy会以实际的正反案例带我们了解什么是好的使用者体验。你会学习到：</p>
-      <p>1.如何发布一个成功的产品并且在市场中避免失败；</p>
-      <p>2.为什么好的使用者设计不只是满足客户需求，同时也要满足商业目标；</p>
-      <p>3.使用者体验和商业价值对接的基础。</p>
-      <p>参与人群：产品经理、市场部经理、工程师、设计师</p>
+      <div class="topic"></div>
     </div>
-    <div class="datetime">
+    <div class="datetime-wrap">
       <i class="iconfont icon-calendar"></i>
-      2015年3月9日 9:00-9:30
+      <span class="datetime"></span>
     </div>
-    <div class="location">
+    <div class="location-wrap">
       <i class="iconfont icon-location"></i>
-      阿里巴巴西溪园区5号楼报告厅
+      <span class="location"></span>
     </div>
   </div>
 </div>
