--- a/src/index.html
+++ b/src/index.html
@@ -31,9 +31,7 @@
   <div class="parallax-wrap">
     <ul id="parallax-scene">
       <li class="layer" data-depth="0.6">
-        <div class="bg-tri-1">
-          <img src="imgs/bg-tri-1.png" height="680" width="1077" alt="" class="">
-        </div>
+        <img src="imgs/bg-tri-1.png" height="680" width="1077" alt="" class="bg-tri-1">
       </li>
       <li class="layer" data-depth="0.4">
         <img src="imgs/bg-2-hero.png" height="auto" width="1811" alt="" class="bg-2-hero">
