--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
         <img src="imgs/bg-tri-1.png" height="680" width="1077" alt="" class="bg-tri-1">
       </li>
       <li class="layer" data-depth="0.4">
-        <img src="imgs/bg-2-hero.png" height="auto" width="1811" alt="" class="bg-2-hero">
+        <img src="imgs/bg-2-hero.png" height="auto" width="100%" alt="" class="bg-2-hero">
       </li>
       <li class="layer" data-depth="0.2">
         <section id="intro">
