--- a/src/index.html
+++ b/src/index.html
@@ -37,13 +37,15 @@
         <img src="imgs/bg-2-hero.png" height="auto" width="100%" alt="" class="bg-2-hero">
       </li>
       <li class="layer" data-depth="0.2">
-        <section id="intro">
-          <div class="hero-wrap">
-            <div class="hero-logo"></div>
-            <a class="sign-up-btn" href="#"></a>
-          </div>
+        <div class="hero-wrap">
+          <div class="hero-logo"></div>
+          <a class="sign-up-btn" href="#"></a>
+        </div>
+      </li>
+      <li class="layer">
+        <div id="intro">
           <p><span class="tri"></span>“Ucan”是由淘宝UED发起组织的用户体验设计交流盛会。2015年，我们将紧扣“客户第一”的主题，发挥专业优势，引领全民参与用户体验，促进用户体验专业领域的互联互通。</p>
-        </section>
+        </div>
       </li>
     </ul>
   </div>
