bugfix: nav #intro

--- a/src/index.html
+++ b/src/index.html
@@ -28,13 +28,13 @@
     </div>
   </header>
 
-  <div class="parallax-wrap">
+  <div class="parallax-wrap" id="intro">
     <ul id="parallax-scene">
       <li class="layer" data-depth="0.6">
         <img src="imgs/bg-tri-1.png" height="680" width="1077" alt="" class="bg-tri-1">
       </li>
       <li class="layer" data-depth="0.4">
-        <img src="imgs/bg-2-hero.png" height="auto" width="100%" alt="" class="bg-2-hero">
+        <img src="imgs/bg-2-hero.png" height="auto" width="1811" alt="" class="bg-2-hero">
       </li>
       <li class="layer" data-depth="0.2">
         <div class="hero-wrap">
@@ -43,7 +43,7 @@
         </div>
       </li>
       <li class="layer">
-        <div id="intro">
+        <div class="intro-wrap">
           <p><span class="tri"></span>“Ucan”是由淘宝UED发起组织的用户体验设计交流盛会。2015年，我们将紧扣“客户第一”的主题，发挥专业优势，引领全民参与用户体验，促进用户体验专业领域的互联互通。</p>
         </div>
       </li>
@@ -379,7 +379,7 @@
 
   <img src="imgs/bg-tri-2.png" height="836" width="994" alt="" class="bg-tri-2">
   <img src="imgs/bg-tri-3.png" height="1476" width="1101" alt="" class="bg-tri-3">
-  <img src="imgs/bg-2-page.png" height="auto" width="100%" alt="" class="bg-2-page">
+  <img src="imgs/bg-2-page.png" height="auto" width="1753" alt="" class="bg-2-page">
 
   <div class="modal-dialog" id="popup">
     <a href="#" class="jqmClose iconfont icon-close"></a>
