bg divided into several layers

--- a/src/index.html
+++ b/src/index.html
@@ -34,9 +34,18 @@
         <img src="imgs/bg-tri-1.png" height="680" width="1077" alt="" class="bg-tri-1">
       </li>
       <li class="layer" data-depth="0.4">
-        <img src="imgs/bg-2-hero.png" height="auto" width="1811" alt="" class="bg-2-hero">
+        <img src="imgs/bg-2-hero1.png" height="auto" width="1811" alt="" class="bg-2-hero">
       </li>
-      <li class="layer" data-depth="0.2">
+      <li class="layer" data-depth="0.3">
+        <img src="imgs/bg-2-hero2.png" height="auto" width="1811" alt="" class="bg-2-hero">
+      </li>
+      <li class="layer" data-depth="0.5">
+        <img src="imgs/bg-2-hero3.png" height="auto" width="1811" alt="" class="bg-2-hero">
+      </li>
+      <li class="layer" data-depth="0.6">
+        <img src="imgs/bg-2-hero4.png" height="auto" width="1811" alt="" class="bg-2-hero">
+      </li>
+      <li class="layer" data-depth=".8">
         <div class="hero-wrap">
           <div class="hero-logo"></div>
           <a class="sign-up-btn" href="#"></a>
