--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <body>
   <header class="navbar">
     <div class="container">
-      <span class="logo"></span>
+      <span class="ucan-logo"></span>
       <ul class="nav-items" id="nav">
         <li class="nav-item">
           <a href="#intro">活动介绍</a>
