更新视觉部分资料

--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
             <div class="tl-dot"></div>
             <a class="topic-mod modal-trigger" data-modal="popup" href="#popup" data-id="0309001">
               <span class="topic">主题待定</span>
-              <span class="name">清华</span>
+              <span class="name">徐迎庆</span>
             </a>
           </div>
           <div class="tl-mod">
@@ -473,6 +473,7 @@
       <hr class="line">
       <div class="topic-wrap">
         <div class="topic">获取中……</div>
+        <div class="detail-wrap">获取中……</div>
       </div>
       <div class="datetime-wrap">
         <i class="iconfont icon-calendar"></i>
