--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,8 @@
       <li class="layer" data-depth="0.8">
         <div class="hero-wrap">
           <div class="hero-logo"></div>
-          <a class="sign-up-btn" href="#"></a>
+          <a class="sign-up-btn" href="http://xue.alibaba-inc.com/trs/searchIndex.htm?_input_charset=UTF-8&keyword=
+撇未&category=TRAIN"></a>
         </div>
       </li>
     </ul>
@@ -149,7 +150,7 @@
             <div class="time">10:50-11:20</div>
             <div class="tl-dot"></div>
             <a class="topic-mod modal-trigger" data-modal="popup" href="#popup" data-id="0310002">
-              <span class="topic">pd谈体验</span>
+              <span class="topic">最好的体验</span>
               <span class="name">处端</span>
             </a>
           </div>
